--- a/style.css
+++ b/style.css
@@ -53,11 +53,13 @@
     display: flex;
     justify-content: space-evenly;
     background-color: pink;
-    width: 620px;
+    width: 900px;
     height: 40px;
     border-radius: 4px;;
 }
-
+.nav-search:hover{
+    border : 2px solid orange;
+}
 .search-select{
     background-color: #f3f3f3;
     width:50px;
@@ -82,3 +84,75 @@
     border-top-right-radius: 4px;    
     border-bottom-right-radius: 4px;
 }
+/* 4 & 5  box*/
+
+span{
+    font-size: 0.7rem;
+}
+
+.nav-second{
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+/* 6 box */
+.nav-cart i{
+     font-size: 30px;
+}
+.nav-cart  {
+    font-size: 0.85rem;
+    font-weight: 700;
+}
+
+/* panel */
+.panel{
+    height: 40px;
+    background-color: #222f3d;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.panel-all {
+    font-weight: 700;
+}
+.panel-option {
+    width : 80% ;
+    font-size: 0.85rem;
+}
+.panel-option p {
+    display : inline;
+    height: 40px;
+    margin-left: 15px;
+}
+.panel-deals{
+    font-size: 0.9rem;
+    font-weight: 700;
+}
+
+/* main section */
+
+.main-section{
+    height: 400px;
+    background-size: cover;
+    background-image: url("WALL_DECOR_HERO_background.jpg");
+}
+.transparent{
+    height : 250px;
+    color: white;
+}
+/* shop-section */
+.shop-section{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #e3f1f1;
+}
+.box{
+    border : 2px solid black;
+    width: 23%;
+    height: 400px;
+    background-color: white;
+}
+.box1{}
+.box2{}
+.box3{}
+.box4{}
