--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     display : flex;
     align-items : center;   
     justify-content: space-evenly;
+    /* position: fixed; */
 }
 /* a. amazon logo */
 .nav-logo{
@@ -143,16 +144,92 @@ span{
 /* shop-section */
 .shop-section{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #e3f1f1;
 }
 .box{
-    border : 2px solid black;
+    /* border : 2px solid black; */
     width: 23%;
     height: 400px;
     background-color: white;
+    padding: 20px 0px 15px ;
+    margin: 15px;
 }
-.box1{}
-.box2{}
-.box3{}
-.box4{}
+.box-content{
+    margin-left:1rem;
+    margin-right: 1rem;
+}
+.box-image{
+    height: 300px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+.box-content p{
+    color: #007185;
+}
+footer{
+    margin-top: 15px;
+}
+.foot-panel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+}
+.foot-panel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+ul{
+    margin: 5px;
+}
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    color: #dddddd;
+    margin-top: 10px;
+}
+.foot-panel3{
+    background-color: #222f3d;
+    color: white;
+    border-top: 0.5px solid white ;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo{
+    background-image: url("amazon_logo.png");
+    height : 50px;
+    background-size: cover;
+    width: 100px;
+    
+}
+.foot-panel4{
+    background-color: #0f1111;
+    color: white;
+    height: 80px;
+    font-size: 0.7rem;
+    text-align: center;
+    /* display: flex;
+    justify-content: cemter;
+    align-items: center;
+} */
+
+.pages{
+    padding-top: 25px;
+}
+.copyrighht{
+    padding-top: 5px;
+    
+}
